--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
         "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
+        "postcss": "^8.5.1",
         "sass": "^1.56.1",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@radix-ui/react-slot": "^1.1.1",
+        "@vitejs/plugin-react": "^4.3.4",
+        "lucide-react": "^0.474.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
     }
 }
